--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:android:local": "eas build --profile preview --platform android",
+    "build:ios:local": "eas build --profile preview --platform ios",
+    "build:android:production": "eas build production --platform android",
+    "build:ios:production": "eas build production --platform ios"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.3.12",
